# flytekit

flytekit/core/: data_persistence.py  rustS3.py  task.py
flytekit/core/rustfs/: Cargo.toml
flytekit/core/rustfs/src/: lib.rs
flytekit/remote/: remote.py
plugins/flytekit-vscode/flytekitplugins/vscode/: decorator.py
tests/flytekit/integration/remote/: test_remote.py
